[package]
name = "syncbuf"
version = "0.1.0"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
edition = "2018"
description = "An append-only buffer with lock-free access and constant-time indexing"
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
