[package]
name = "syncbuf"
version = "0.1.0"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An append-only buffer with lock-free thread-safety and constant-time indexing"
categories = ["concurrency", "data-structures", "no-std"]
keywords = ["lock-free"]
repository = "https://github.com/bplevin36/syncbuf"
